--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -1,3 +1,16 @@
 
 server:
   port: 8091
+
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: user-status-route
+          uri: http://localhost:8090
+          predicates:
+            - Path=/users/status/check
+            - Method=GET
+          filters:
+#            - StripPrefix=1
+            - RemoveRequestHeader=Cookie
