--- a/ApiGateway/src/main/resources/application.yml
+++ b/ApiGateway/src/main/resources/application.yml
@@ -3,11 +3,13 @@ server:
   port: 8091
 
 spring:
+  application:
+    name: api-gateway
   cloud:
     gateway:
       routes:
         - id: user-status-route
-          uri: http://localhost:8090
+          uri: lb://resource-server
           predicates:
             - Path=/users/status/check
             - Method=GET
@@ -15,14 +17,14 @@ spring:
 #            - StripPrefix=1
             - RemoveRequestHeader=Cookie
         - id: albums
-          uri: http://localhost:8092
+          uri: lb://album-service
           predicates:
             - Path=/albums
             - Method=GET
           filters:
             - RemoveRequestHeader=Cookie
         - id: photos
-          uri: http://localhost:8093
+          uri: lb://photo-service
           predicates:
             - Path=/photos
             - Method=GET
@@ -35,3 +37,9 @@ spring:
 #            - Method=GET
 #          filters:
 #            - RemoveRequestHeader=Cookie
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8010/eureka/
