--- a/album/src/main/resources/application.yml
+++ b/album/src/main/resources/application.yml
@@ -2,9 +2,16 @@ server:
   port: 8092
 
 spring:
+  application:
+    name: album-service
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:${KEYCLOAK_PORT_HOST:28080}/auth/realms/realm2nd
           jwk-set-uri: http://localhost:${KEYCLOAK_PORT_HOST:28080}/auth/realms/realm2nd/protocol/openid-connect/certs
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8010/eureka/
