--- a/resource-server/src/main/resources/application.yml
+++ b/resource-server/src/main/resources/application.yml
@@ -3,9 +3,17 @@ server:
   port: 8090
 
 spring:
+  application:
+    name: resource-server
+
   security:
     oauth2:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:${KEYCLOAK_PORT_HOST:28080}/auth/realms/realm2nd
           jwk-set-uri: http://localhost:${KEYCLOAK_PORT_HOST:28080}/auth/realms/realm2nd/protocol/openid-connect/certs
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8010/eureka/
