--- a/.env
+++ b/.env
@@ -11,6 +11,14 @@ POSTGRESQL_PORT_CONTAINER=5432
 #KEYCLOAK_VERSION=13.0.0
 KEYCLOAK_VERSION=latest
 KEYCLOAK_PORT_HOST=28080
+KEYCLOAK_PORT_HOST_URL=http://localhost:28080
 KEYCLOAK_PORT_CONTAINER=8080
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=123456@
+
+KEYCLOAK_CLIENT_ID=client2nd
+KEYCLOAK_REALM=realm2nd
+KEYCLOAK_CLIENT_SECRET=0biRVsIOjzEUvyuePV0yHls5G9EZyK2w
+KEYCLOAK_SCOPE="openid kien"
+KEYCLOAK_AUTHORIZATION_GRANT_TYPE=authorization_code
+KEYCLOAK_REDIRECT_URI=http://localhost:3000
